@@ -211,7 +211,9 @@ js_window_alert(struct SEE_interpreter *interp, struct SEE_object *self,
 	struct view_state *vs = win->vs;
 	unsigned char *string;
 
-	see_check_class(interp, thisobj, &js_window_object_class);
+	/* Do not check thisobj->objectclass.  ELinks sets this
+	 * function as a property of both the window object and the
+	 * global object, so thisobj may validly refer to either.  */
 
 	SEE_SET_BOOLEAN(res, 1);
 	if (argc < 1)
@@ -248,7 +250,9 @@ js_window_open(struct SEE_interpreter *interp, struct SEE_object *self,
 	static int ratelimit_count;
 #endif
 
-	see_check_class(interp, thisobj, &js_window_object_class);
+	/* Do not check thisobj->objectclass.  ELinks sets this
+	 * function as a property of both the window object and the
+	 * global object, so thisobj may validly refer to either.  */
 
 	SEE_SET_OBJECT(res, (struct SEE_object *)win);
 	if (get_opt_bool("ecmascript.block_window_opening")) {
@@ -342,7 +346,9 @@ js_setTimeout(struct SEE_interpreter *interp, struct SEE_object *self,
 	unsigned char *code;
 	int timeout;
 
-	see_check_class(interp, thisobj, &js_window_object_class);
+	/* Do not check thisobj->objectclass.  ELinks sets this
+	 * function as a property of both the window object and the
+	 * global object, so thisobj may validly refer to either.  */
 
 	if (argc != 2) return;
 	ei = ((struct global_object *)interp)->interpreter;
